--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -19,6 +21,7 @@
     "react-bootstrap": "^2.10.5",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6"
